--- a/pages/SA/SA010302_01.html
+++ b/pages/SA/SA010302_01.html
@@ -69,7 +69,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">상품구분</th>
+                                <th scope="row">어플리케이션<br/>상품</th>
                                 <td colspan="3">
                                     <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="lg">
                                         <option value="1">ASP 3.0</option>
@@ -83,7 +83,7 @@
                 <div class="title-box xsm">
                     <h4 class="sub-title">결제 상품</h4>
                 </div>
-                <div class="title-box xsm">
+                <div class="title-box xs">
                     <div class="left-group">
                         <div class="h-checkbox">
                             <input type="checkbox" id="checkbox1-1" name="checkbox" />
