--- a/pages/SA/SA010301.html
+++ b/pages/SA/SA010301.html
@@ -64,34 +64,52 @@
                             <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
                         </div>
                         <div class="table-set">
-                            <div class="title-box sm">
-                                <div class="left-group">
-                                    <span class="amount-set">
-                                        <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
-                                        <span class="amount">26</span><span class="unit">건</span>
-                                    </span>
-                                </div>
-                                <div class="right-group">
-                                    <div class="btn-box">
-                                        <button data-role="button">상품등록</button>
+                            <script type="text/x-kendo-template" id="toolbarTemplate">
+                                <div class="title-box sm">
+                                    <div class="left-group">
+                                        <span class="amount-set">
+                                            <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                                            <span class="amount">26</span><span class="unit">건</span>
+                                        </span>
+                                    </div>
+                                    <div class="right-group">
+                                        <div class="btn-box">
+                                            <button role="button" class="k-button k-grid-add">상품등록</button>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="table-content grid">
-                                <div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
-                                    { "field": "N", "width": 50 },
-                                    { "field": "NO", "width": 50 },
-                                    { "field": "상품코드", "width": 90 },
-                                    { "field": "상품명", "width": 170 },
-                                    { "field": "어플리케이션", "width": 146 },
-                                    { "field": "표준가격", "width": 140 },
-                                    { "field": "최소가격", "width": 146 },
-                                    { "field": "승인상태", "width": 140 },
-                                    { "field": "사용가능업종", "width": 140 },
-                                    { "field": "등록일", "width": 120 },
-                                    { "field": "종료일", "width": 120 }
-                                ]' data-bind="source: gridSource">
+                            </script>
+                            <script type="text/x-kendo-template" id="checkboxTemplate">
+                                <div class="h-checkbox no-label">
+                                    <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                                    <label for="checkbox-nolabel"></label> 
                                 </div>
+                            </script>
+                            <div class="table-content grid">
+                                <div data-role="grid" 
+                                data-sortable="true" 
+                                data-editable="true" 
+                                data-columns='[
+                                { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
+                                { "title": "NO.", "width": 50 },
+                                { "field": "상품코드", "width": 90 },
+                                { "field": ""  }
+                                ]' 
+                                data-bind="source: gridSource"
+                                data-toolbar="#=toolbarTemplate()#">
+                            </div>
+                            <script>
+                            function toolbarTemplate() {
+                                var template = kendo.template($('#toolbarTemplate').html());
+                                var result = template({});
+                                return result
+                            }
+                            function checkboxTemplate() {
+                                var template = kendo.template($('#checkboxTemplate').html());
+                                var result = template({});
+                                return result
+                            }
+                            </script>
                                 <div class="table-bottom">
                                     <button data-role="button" class="gray-border">삭제</button>
                                 </div>
