--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -4,15 +4,25 @@
             <p class="title">Default Grid</p>
         </div>
         <div class="g-example-body flex-inline">
-            <div class="table-content grid">
-                <div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
-                    { "field": "N", "width": 50 },
-                    { "field": "NO", "width": 50 },
+            <script type="text/x-kendo-template" class="checkboxTemplate">
+                <div class="h-checkbox no-label">
+                    <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                    <label for="checkbox-nolabel"></label> 
+                </div>
+            </script>
+            <div class="table-content grid" id="grid_viewModel_default">
+                <div data-role="grid" 
+                    data-sortable="true" 
+                    data-editable="false" 
+                    data-columns='[
+                    { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
+                    { "title": "NO.", "width": 50 },
                     { "field": "상품코드", "width": 90 },
                     { "field": "상품명", "width": 170 },
                     { "field": "어플리케이션", "width": 146 },
                     { "field": "표준가격", "width": 140 },
-                    { "field": "최소가격", "width": 146 }
+                    { "field": "최소가격", "width": 146 },
+                    { "field": "기타"}
                 ]' data-bind="source: gridSource">
                 </div>
                 <div class="table-bottom">
@@ -20,30 +30,45 @@
                 </div>
             </div>
             <script>
-                var viewModel = kendo.observable({
+                var grid_viewModel_default = kendo.observable({
                     gridSource: [
-                        { "N":"ch", "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
-                        { "N":"ch", "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
-                        { "N":"ch", "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"}
+                        { "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"40,000 원"},
+                        { "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"20,000 원"},
+                        { "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"}
                     ],
                     displayGridSource: function() {
                         return stringify(this.get("gridSource").toJSON());
                     },
                 });
-                kendo.bind($(".table-content.grid"), viewModel);
+                kendo.bind($("#grid_viewModel_default"), grid_viewModel_default);
+                function checkboxTemplate() {
+                    var template = kendo.template($('.checkboxTemplate').html());
+                    var result = template({});
+                    return result
+                }
             </script>
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
-&lt;div class="table-content grid">
-    &lt;div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
-        { "field": "N", "width": 50 },
-        { "field": "NO", "width": 50 },
+&lt;script type="text/x-kendo-template" class="checkboxTemplate">
+    &lt;div class="h-checkbox no-label">
+        &lt;input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+        &lt;label for="checkbox-nolabel">&lt;/label> 
+    &lt;/div>
+&lt;/script>
+&lt;div class="table-content grid" id="grid_viewModel_default">
+    &lt;div data-role="grid" 
+        data-sortable="true" 
+        data-editable="false" 
+        data-columns='[
+        { "title": "&lt;div class=h-checkbox>&lt;input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox />&lt;label for=checkbox-nolabel>&lt;/label>&lt;/div>", "width": 50, "template": "#=checkboxTemplate()#" },
+        { "title": "NO.", "width": 50 },
         { "field": "상품코드", "width": 90 },
         { "field": "상품명", "width": 170 },
         { "field": "어플리케이션", "width": 146 },
         { "field": "표준가격", "width": 140 },
-        { "field": "최소가격", "width": 146 }
+        { "field": "최소가격", "width": 146 },
+        { "field": "기타"}
     ]' data-bind="source: gridSource">
     &lt;/div>
     &lt;div class="table-bottom">
@@ -51,17 +76,181 @@
     &lt;/div>
 &lt;/div>
 &lt;script>
-    var viewModel = kendo.observable({
+    var grid_viewModel_default = kendo.observable({
         gridSource: [
-            { "N":"ch", "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
-            { "N":"ch", "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"},
-            { "N":"ch", "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"}
+            { "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"40,000 원"},
+            { "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"20,000 원"},
+            { "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원"}
         ],
         displayGridSource: function() {
             return stringify(this.get("gridSource").toJSON());
         },
     });
-    kendo.bind($(".table-content.grid"), viewModel);
+    kendo.bind($("#grid_viewModel_default"), grid_viewModel_default);
+    function checkboxTemplate() {
+        var template = kendo.template($('.checkboxTemplate').html());
+        var result = template({});
+        return result
+    }
+&lt;/script>
+            </code></pre>
+        </div>
+    </div>
+
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">filter Grid</p>
+        </div>
+        <div class="g-example-body flex-inline">
+            <div class="table-content grid">
+                <script type="text/x-kendo-template" class="toolbarTemplate">
+                    <div class="title-box sm mt-20">
+                        <div class="left-group">
+                            <span class="amount-set">
+                                <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                                <span class="amount">26</span><span class="unit">건</span>
+                            </span>
+                        </div>
+                        <div class="right-group">
+                            <div class="btn-box">
+                                <button role="button" class="k-button">수정</button>
+                                <button role="button" class="k-button k-grid-add">등록</button>
+                            </div>
+                        </div>
+                    </div>
+                </script>
+                <script type="text/x-kendo-template" class="checkboxTemplate">
+                    <div class="h-checkbox no-label">
+                        <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                        <label for="checkbox-nolabel"></label> 
+                    </div>
+                </script>
+                <div class="table-content grid" id="grid_viewModel_filter">
+                    <div data-role="grid" 
+                        data-sortable="true" 
+                        data-editable="true" 
+                        data-columns='[
+                        { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
+                        { "title": "NO.", "width": 50 },
+                        { "field": "상품코드", "width": 90 },
+                        { "field": "상품명", "width": 170 },
+                        { "field": "어플리케이션", "width": 146 },
+                        { "field": "표준가격", "width": 140 },
+                        { "field": "최소가격", "width": 146 },
+                        { "field": "승인상태", "width": 140 },
+                        { "field": "사용가능업종", "width": 140 },
+                        { "field": "등록일", "width": 120 },
+                        { "field": "종료일", "width": 120 }
+                        ]' 
+                        data-bind="source: gridSource"
+                        data-toolbar="#=toolbarTemplate()#"
+                        data-filterable="{mode:'row'}">
+                    </div>
+                    <div class="table-bottom">
+                        <button data-role="button" class="gray-border">삭제</button>
+                    </div>
+                </div>
+            </div>
+            <script>
+                var grid_viewModel_filter = kendo.observable({
+                    gridSource: [
+                        {  "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"40,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                        {  "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"20,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                        {  "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
+                    ],
+                    displayGridSource: function() {
+                        return stringify(this.get("gridSource").toJSON());
+                    },
+                });
+                kendo.bind($("#grid_viewModel_filter"), grid_viewModel_filter);
+        
+                function toolbarTemplate() {
+                    var template = kendo.template($('.toolbarTemplate').html());
+                    var result = template({});
+                    return result
+                }
+                function checkboxTemplate() {
+                    var template = kendo.template($('.checkboxTemplate').html());
+                    var result = template({});
+                    return result
+                }
+            </script>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="table-content grid">
+    &lt;script type="text/x-kendo-template" class="toolbarTemplate">
+        &lt;div class="title-box sm mt-20">
+            &lt;div class="left-group">
+                &lt;span class="amount-set">
+                    &lt;span class="amount current">1&lt;/span>&lt;span class="unit">건&lt;/span>&lt;span class="dash">/&lt;/span>
+                    &lt;span class="amount">26&lt;/span>&lt;span class="unit">건&lt;/span>
+                &lt;/span>
+            &lt;/div>
+            &lt;div class="right-group">
+                &lt;div class="btn-box">
+                    &lt;button role="button" class="k-button">수정&lt;/button>
+                    &lt;button role="button" class="k-button k-grid-add">등록&lt;/button>
+                &lt;/div>
+            &lt;/div>
+        &lt;/div>
+    &lt;/script>
+    &lt;script type="text/x-kendo-template" class="checkboxTemplate">
+        &lt;div class="h-checkbox no-label">
+            &lt;input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+            &lt;label for="checkbox-nolabel">&lt;/label> 
+        &lt;/div>
+    &lt;/script>
+    &lt;div class="table-content grid" id="grid_viewModel_filter">
+        &lt;div data-role="grid" 
+            data-sortable="true" 
+            data-editable="true" 
+            data-columns='[
+            { "title": "&lt;div class=h-checkbox>&lt;input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox />&lt;label for=checkbox-nolabel>&lt;/label>&lt;/div>", "width": 50, "template": "#=checkboxTemplate()#" },
+            { "title": "NO.", "width": 50 },
+            { "field": "상품코드", "width": 90 },
+            { "field": "상품명", "width": 170 },
+            { "field": "어플리케이션", "width": 146 },
+            { "field": "표준가격", "width": 140 },
+            { "field": "최소가격", "width": 146 },
+            { "field": "승인상태", "width": 140 },
+            { "field": "사용가능업종", "width": 140 },
+            { "field": "등록일", "width": 120 },
+            { "field": "종료일", "width": 120 }
+            ]' 
+            data-bind="source: gridSource"
+            data-toolbar="#=toolbarTemplate()#"
+            data-filterable="{mode:'row'}">
+        &lt;/div>
+        &lt;div class="table-bottom">
+            &lt;button data-role="button" class="gray-border">삭제&lt;/button>
+        &lt;/div>
+    &lt;/div>
+&lt;/div>
+&lt;script>
+    var grid_viewModel_filter = kendo.observable({
+        gridSource: [
+            {  "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"40,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+            {  "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"20,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+            {  "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
+        ],
+        displayGridSource: function() {
+            return stringify(this.get("gridSource").toJSON());
+        },
+    });
+    kendo.bind($("#grid_viewModel_filter"), grid_viewModel_filter);
+
+    function toolbarTemplate() {
+        var template = kendo.template($('.toolbarTemplate').html());
+        var result = template({});
+        return result
+    }
+    function checkboxTemplate() {
+        var template = kendo.template($('.checkboxTemplate').html());
+        var result = template({});
+        return result
+    }
 &lt;/script>
             </code></pre>
         </div>
