datepicker 가이드 추가

--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -45,6 +45,31 @@
         </div>
     </div>
 
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">DatePicker</p>
+        </div>
+        <div class="g-example-body flex-block">
+            <input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+            <div class="form-set">
+                <input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+                <span class="bar">~</span>
+                <input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+            </div>
+        </div>
+
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+&lt;div class="form-set">
+    &lt;input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+    &lt;span class="bar">~&lt;/span>
+    &lt;input data-role="datepicker" placeholder="yyyymmdd" class="sm">
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
 
     <div class="g-example-wrap">
         <div class="g-example-head">
@@ -110,19 +135,7 @@
         </div>
     </div>
     
-    <div class="g-example-wrap">
-        <div class="g-example-head">
-            <p class="title">Date picker</p>
-        </div>
-        <div class="g-example-body flex-block">
-            <input data-role="datepicker" placeholder="yyyymmdd">
-        </div>
-        <div class="g-example-foot">
-            <pre><code class="html">
-&lt;input data-role="datepicker" placeholder="yyyymmdd">
-            </code></pre>
-        </div>
-    </div>
+   
 
     <div class="g-example-wrap">
         <div class="g-example-head">
