--- a/pages/SA/SA010102_01.html
+++ b/pages/SA/SA010102_01.html
@@ -203,7 +203,7 @@
                     <li class="list">* 비밀번호는 8~12자 영문, 숫자, 특수문자를 포함해서 작성해야 합니다.</li>
                     <li class="list">* 특수문자는 [!@#$^*_-]만 사용가능 합니다.</li>
                 </ul> -->
-                <div class="btn-box justify-content-end">
+                <div class="btn-box bottom justify-content-end">
                     <button data-role="button" class="">등록</button>
                 </div>
             </div>
