--- a/pages/SA/SA010102_02.html
+++ b/pages/SA/SA010102_02.html
@@ -391,7 +391,7 @@
                     </table>
                 </div>
 
-                <div class="btn-box justify-content-end">
+                <div class="btn-box bottom justify-content-end">
                     <button data-role="button" class="">등록</button>
                 </div>
             </div>
