--- a/guide/list.html
+++ b/guide/list.html
@@ -192,7 +192,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">03상품정보</td>
                     <td class="d3">02등록(01어플리케이션)</td>
@@ -205,7 +205,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">03상품정보</td>
                     <td class="d3">02등록(02결제서비스)</td>
@@ -218,7 +218,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">03상품정보</td>
                     <td class="d3">02등록(03부가서비스)</td>
@@ -231,7 +231,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">03상품정보</td>
                     <td class="d3">02등록(04특화서비스)</td>
@@ -244,7 +244,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">04할인정보</td>
                     <td class="d3">01조회</td>
@@ -257,7 +257,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">04할인정보</td>
                     <td class="d3">01조회</td>
@@ -270,7 +270,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">04할인정보</td>
                     <td class="d3">02등록</td>
@@ -283,7 +283,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">05협력사담보납이조회</td>
                     <td class="d3">01조회</td>
@@ -296,7 +296,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">06협력사실적관리</td>
                     <td class="d3">01조회</td>
@@ -309,7 +309,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">06협력사실적관리</td>
                     <td class="d3">03목표등록</td>
