--- a/pages/BC/BC010101.html
+++ b/pages/BC/BC010101.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../resources/css/index_bc.css">
 </head>
-<body class="bc">
+<body>
     <div class="wrap">
         <!-- Header Include -->
         <div data-include-path="../layout/header_bp.html"></div>
@@ -63,13 +63,35 @@
                                 <th scope="row">핸드폰번호<span class="required">*</span></th>
                                 <td><input type="text" class="h-input" /></td>
                                 <th scope="row">사용유무<span class="required">*</span></th>
-                                <td><input type="text" class="h-input" /></td>
+                                <td>
+                                    <div class="check-group">
+                                        <div class="h-checkbox">
+                                            <input type="radio" id="radio-use1" name="radio-use" />
+                                            <label for="radio-use1"><span>사용</span></label>
+                                        </div>
+                                        <div class="h-checkbox">
+                                            <input type="radio" id="radio-use2" name="radio-use" checked="checked" />
+                                            <label for="radio-use2"><span>미사용</span></label>
+                                        </div>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">비밀번호<span class="required">*</span></th>
                                 <td><input type="text" class="h-input" /></td>
                                 <th scope="row">엑셀다운로드</th>
-                                <td><input type="text" class="h-input" /></td>
+                                <td>
+                                    <div class="check-group">
+                                        <div class="h-checkbox">
+                                            <input type="radio" id="radio-excel1" name="radio-excel" />
+                                            <label for="radio-excel1"><span>사용</span></label>
+                                        </div>
+                                        <div class="h-checkbox">
+                                            <input type="radio" id="radio-excel2" name="radio-excel" checked="checked" />
+                                            <label for="radio-excel2"><span>미사용</span></label>
+                                        </div>
+                                    </div>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -79,7 +101,7 @@
                     <li class="list">* 비밀번호는 8~12자 영문, 숫자, 특수문자를 포함해서 작성해야 합니다.</li>
                     <li class="list">* 특수문자는 [!@#$^*_-]만 사용가능 합니다.</li>
                 </ul>
-                <div class="btn-box justify-content-end mt-10">
+                <div class="btn-box bottom justify-content-end mt-10">
                     <button data-role="button" class="">저장</button>
                 </div>
             </div>
