--- a/pages/SA/SA010302_01.html
+++ b/pages/SA/SA010302_01.html
@@ -83,7 +83,7 @@
                 <div class="title-box xsm">
                     <h4 class="sub-title">결제 상품</h4>
                 </div>
-                <!-- <div class="title-box xs">
+                <div class="title-box xs">
                     <div class="left-group">
                         <div class="h-checkbox">
                             <input type="checkbox" id="checkbox1-1" name="checkbox" />
@@ -96,10 +96,10 @@
                             <span class="amount">26</span><span class="unit">건</span>
                         </span>
                     </div>
-                </div> -->
+                </div>
                 
                 <div class="optional-box">
-                    <script type="text/x-kendo-template" id="listboxTemplate">
+                    <!-- <script type="text/x-kendo-template" id="listboxTemplate">
                         <div class="title-box xs">
                             <div class="left-group">
                                 <div class="h-checkbox k-button" data-command="transferAllTo">
@@ -114,15 +114,14 @@
                                 </span>
                             </div>
                         </div>
-                    </script>
-                    <script type="text/x-kendo-template" id="row-template">
+                    </script> -->
+                    <!-- <script type="text/x-kendo-template" id="row-template">
                         <span class="k-state-default"><h3 data-bind="text: ProductName"></h3><p  data-bind="text: ProductID"></p></span>
-                    </script>
+                    </script> -->
                     <select id="listbox1" 
                         data-role="listbox"
                         data-text-field="ProductName"
                         data-value-field="ProductID"
-                        data-template="row-template"
                         data-connect-with="listbox2"
                         data-toolbar='{
                             position: "top",
@@ -142,7 +141,6 @@
                         data-text-field="ProductName"
                         data-value-field="ProductID">
                     </select>
-                    <!-- data-toolbar="{position: 'top', tools: listboxTemplate }" -->
                     <script>
                         function listboxTemplate() {
                             var template = kendo.template($('#listboxTemplate').html());
@@ -151,9 +149,6 @@
                         }
                     </script>
                 </div>
-
-                <!-- data-toolbar='{ tools: ["transferTo", "transferFrom", "transferAllTo", "transferAllFrom"] }' -->
-
                 <div class="title-box xsm">
                     <div class="left-group">
                         <h4 class="sub-title">배분비율</h4>
@@ -201,17 +196,17 @@
                                         </div>
                                     </div>
                                 </th>
-                            </tr>
+                            </tr> 
                         </thead>
                         <tbody>
                             <tr>
-                                <td><input type="text" class="h-input" value="1" placeholder=""/></td>
-                                <td><input type="text" class="h-input" value="1" placeholder=""/></td>
-                                <td><input type="text" class="h-input" value="1" placeholder=""/></td>
-                                <td>
+                                <td class="text-center"><input type="text" class="h-input xs" value="1" placeholder=""/></td>
+                                <td class="text-center"><input type="text" class="h-input xs" value="1" placeholder=""/></td>
+                                <td class="text-center"><input type="text" class="h-input xs" value="1" placeholder=""/></td>
+                                <td class="text-center">
                                     <div class="form-set">
-                                        <input type="text" class="h-input" value="1" placeholder=""/>
-                                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="lg">
+                                        <input type="text" class="h-input xs" value="1" placeholder=""/>
+                                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="xsm">
                                             <option value="1">ASP 3.0</option>
                                             <option value="2">오프라인</option>
                                         </select>
@@ -222,7 +217,7 @@
                     </table>
                 </div>
 
-                <div class="btn-box justify-content-end">
+                <div class="btn-box bottom justify-content-end">
                     <button data-role="button" class="">등록</button>
                 </div>
             </div>
