--- a/pages/SA/SA010302_02.html
+++ b/pages/SA/SA010302_02.html
@@ -63,25 +63,60 @@
                                 <th scope="row">수수료</th>
                                 <td colspan="3">
                                     <div class="divide">
-                                        <div class="form-set">
-                                            <div class="h-checkbox no-label">
-                                                <input type="checkbox" id="checkbox-nolabel" name="checkbox" />
-                                                <label for="checkbox-nolabel"></label> 
+                                        <div class="list">
+                                            <div class="form-set">
+                                                <div class="h-checkbox">
+                                                    <input type="checkbox" id="checkbox-fee1" name="checkbox" />
+                                                    <label for="checkbox-fee1"></label> 
+                                                </div>
+                                                <select data-role="dropdownlist" data-value="의뢰수수료" data-option-label="의뢰수수료" class="sm"> 
+                                                    <option value="1">온라인</option>
+                                                    <option value="2">오프라인</option>
+                                                </select>
+                                                <select data-role="dropdownlist" data-value="정액" data-option-label="정액" class="xs">
+                                                    <option value="1">온라인</option>
+                                                    <option value="2">오프라인</option>
+                                                </select>
+                                                <input type="text" class="h-input xs" value="500" />
+                                                <span class="unit">원</span>
                                             </div>
-                                            <select data-role="dropdownlist" data-value="결제서비스코드" data-option-label="결제서비스코드">
-                                                <option value="1">온라인</option>
-                                                <option value="2">오프라인</option>
-                                            </select>
-                                            <select data-role="dropdownlist" data-value="결제서비스코드" data-option-label="결제서비스코드">
-                                                <option value="1">온라인</option>
-                                                <option value="2">오프라인</option>
-                                            </select>
-                                            <input type="text" class="h-input" value="자동생성" disabled="disabled"/>
-                                            <span class="unit">원</span>
+                                        </div>
+                                        <div class="list">
+                                            <div class="form-set">
+                                                <div class="h-checkbox">
+                                                    <input type="checkbox" id="checkbox-fee2" name="checkbox" />
+                                                    <label for="checkbox-fee2">영중소수수료</label> 
+                                                </div>
+                                                <input type="text" class="h-input xs" placeholder="일반" class="xs"/>
+                                                <input type="text" class="h-input xs" placeholder="영세" class="xs"/>
+                                                <input type="text" class="h-input xs" placeholder="중소1" class="xs"/>
+                                                <input type="text" class="h-input xs" placeholder="중소2" class="xs"/>
+                                                <input type="text" class="h-input xs" placeholder="중소3" class="xs"/>
+                                                <span class="unit">%</span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="divide">
-
+                                        <div class="list">
+                                            <div class="form-set">
+                                                <div class="h-checkbox">
+                                                    <input type="checkbox" id="checkbox-fee3" name="checkbox" />
+                                                    <label for="checkbox-fee3">최소수수료</label> 
+                                                </div>
+                                                <input type="text" class="h-input xs" value="500" class="xs"/>
+                                                <span class="unit">원</span>
+                                            </div>
+                                        </div>
+                                        <div class="list">
+                                            <div class="form-set">
+                                                <div class="h-checkbox">
+                                                    <input type="checkbox" id="checkbox-fee4" name="checkbox" />
+                                                    <label for="checkbox-fee4">무료건수</label> 
+                                                </div>
+                                                <input type="text" class="h-input xs" value="" class="xs"/>
+                                                <span class="unit">건</span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
@@ -91,7 +126,7 @@
                 <div class="title-box xsm">
                     <h4 class="sub-title">결제 상품</h4>
                 </div>
-                <div class="title-box xsm">
+                <div class="title-box xs">
                     <div class="left-group">
                         <div class="h-checkbox">
                             <input type="checkbox" id="checkbox1-1" name="checkbox" />
@@ -105,95 +140,60 @@
                         </span>
                     </div>
                 </div>
-
+                
                 <div class="optional-box">
-                    <!-- <label for="optional" id="employees">Employees</label>
-                    <label for="selected">Developers</label>
-                    <br /> -->
-                    
-                    <select id="optional" >
-                        <option>Steven White</option>
-                        <option>Nancy King</option>
-                        <option>Nancy Davolio</option>
-                        <option>Robert Davolio</option>
-                        <option>Michael Leverling</option>
-                        <option>Andrew Callahan</option>
-                        <option>Michael Suyama</option>
+                    <!-- <script type="text/x-kendo-template" id="listboxTemplate">
+                        <div class="title-box xs">
+                            <div class="left-group">
+                                <div class="h-checkbox k-button" data-command="transferAllTo">
+                                    <input type="checkbox" id="checkbox1-1" name="checkbox" />
+                                    <label for="checkbox1-1"><span>모두선택</span></label>
+                                </div>
+                            </div>
+                            <div class="right-group">
+                                <span class="amount-set">
+                                    <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                                    <span class="amount">26</span><span class="unit">건</span>
+                                </span>
+                            </div>
+                        </div>
+                    </script> -->
+                    <!-- <script type="text/x-kendo-template" id="row-template">
+                        <span class="k-state-default"><h3 data-bind="text: ProductName"></h3><p  data-bind="text: ProductID"></p></span>
+                    </script> -->
+                    <select id="listbox1" 
+                        data-role="listbox"
+                        data-text-field="ProductName"
+                        data-value-field="ProductID"
+                        data-connect-with="listbox2"
+                        data-toolbar='{
+                            position: "top",
+                            tools: [ "moveDown", "transferTo", "transferFrom", "transferAllTo", "transferAllFrom", "remove"]
+                        }'
+                        data-bind="source: products,
+                            events: {
+                                change: change,
+                                dataBound: dataBound,
+                                reorder: reorder,
+                                remove: remove
+                            }">
                     </select>
-                    <select id="selected"></select>
+                    <select id="listbox2" 
+                        data-role="listbox"
+                        data-connect-with="listbox1"
+                        data-text-field="ProductName"
+                        data-value-field="ProductID">
+                    </select>
+                    <script>
+                        function listboxTemplate() {
+                            var template = kendo.template($('#listboxTemplate').html());
+                            var result = template({});
+                            return result
+                        }
+                    </script>
                 </div>
 
-                <div class="title-box xsm">
-                    <div class="left-group">
-                        <h4 class="sub-title">배분비율</h4>
-                    </div>
-                </div>
-                <div class="table">
-                    <table>
-                        <colgroup>
-                            <col width="132px" />
-                            <col width="132px" />
-                            <col width="132px" />
-                            <col width="*" />
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th scope="col">
-                                    <div class="check-group">
-                                        <div class="h-checkbox">
-                                            <input type="checkbox" id="checkboxRate-1" name="checkbox" />
-                                            <label for="checkboxRate-1"><span>본사</span></label>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th scope="col">
-                                    <div class="check-group">
-                                        <div class="h-checkbox">
-                                            <input type="checkbox" id="checkboxRate-2" name="checkbox" />
-                                            <label for="checkboxRate-2"><span>영업협력사</span></label>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th scope="col">
-                                    <div class="check-group">
-                                        <div class="h-checkbox">
-                                            <input type="checkbox" id="checkboxRate-3" name="checkbox" />
-                                            <label for="checkboxRate-3"><span>SW협력사</span></label>
-                                        </div>
-                                    </div>
-                                </th>
-                                <th scope="col">
-                                    <div class="check-group">
-                                        <div class="h-checkbox">
-                                            <input type="checkbox" id="checkboxRate-4" name="checkbox" />
-                                            <label for="checkboxRate-4"><span>제휴사</span></label>
-                                        </div>
-                                    </div>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td><input type="text" class="h-input" value="1" placeholder=""/></td>
-                                <td><input type="text" class="h-input" value="1" placeholder=""/></td>
-                                <td><input type="text" class="h-input" value="1" placeholder=""/></td>
-                                <td>
-                                    <div class="form-set">
-                                        <input type="text" class="h-input" value="1" placeholder=""/>
-                                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="lg">
-                                            <option value="1">ASP 3.0</option>
-                                            <option value="2">오프라인</option>
-                                        </select>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-
-
-                <div class="btn-box justify-content-end">
+                <div class="btn-box bottom justify-content-end">
                     <button data-role="button" class="">등록</button>
                 </div>
             </div>
